0.03

0.02 2022-07-05T19:05:07+02:00
 - Add is_json_type_struct() test subroutine.
 - Fix minimal dependency to Cpanel::JSON::XS.

0.01 2022-07-04T13:18:39+02:00
 - First version.