@@ -21,8 +21,8 @@ README
 SIGNATURE
 t/Test-JSON-Type/01-use.t
 t/Test-JSON-Type/02-version.t
-t/Test-JSON-Type/03-is_json_type.t
-t/Test-JSON-Type/04-is_json_type_struct.t
+t/Test-JSON-Type/03-cmp_json_types.t
+t/Test-JSON-Type/04-is_json_type.t
 Type.pm
 xt/Test-JSON-Type/01-pod_coverage.t
 xt/Test-JSON-Type/02-pod.t
